añadi color de las motos

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
     <table class="motorcycle-details">
         <tr>
             <th>Modelo</th>
+            <th>Ccolores</th>
             <th>Precio</th>
             <th>Características</th>
+            
         </tr>
         <tr>
             <td>Moto Deportiva</td>
