añadi color de las motos

--- a/index.html
+++ b/index.html
@@ -69,43 +69,50 @@
     <table class="motorcycle-details">
         <tr>
             <th>Modelo</th>
-            <th>Ccolores</th>
+            <th>Colores</th>
             <th>Precio</th>
             <th>Características</th>
             
         </tr>
         <tr>
             <td>Moto Deportiva</td>
+            <td>rojo,verde</td>
             <td>40.721.000</td>
             <td>Velocidad, estilo</td>
         </tr>
         <tr>
             <td>Moto Todoterreno</td>
+            <td>amarillo,azul,negro</td>
             <td>$$70.721.000</td>
             <td>Robusta, todoterreno</td>
         </tr>
         <tr>
             <td>Moto Clásica</td>
+            <td>negro</td>
             <td>$20.821.000</td>
             <td>Elegancia, tradición</td>
         </tr>
         <tr>
             <td>Moto Touring</td>
+            <td>rojo</td>
             <td>$100.721.000</td>
             <td>Comodidad en largos viajes</td>
         </tr>
         <tr>
             <td>Moto Electrica</td>
+            <td>amarillo,negro,blanco</td>
             <td>$7.721.000</td>
             <td>Amigable con el medio ambiente</td>
         </tr>
         <tr>
             <td>Moto Chopper</td>
+            <td>gris</td>
             <td>$4.921.000</td>
             <td>Estilo único, custom</td>
         </tr>
         <tr>
             <td>Moto Motocross</td>
+            <td>blanco</td>
             <td>$12.781.000</td>
             <td>Diseñada para pista y tierra</td>
         </tr>
