--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
             <input type="text" id="nombre" name="nombre">
             <label for="correo">Correo electrónico:</label>
             <input type="email" id="correo" name="correo">
+            <label for="direccion">Direccion de recidencia:</label>
+            <input type="direccion" id="direccion" name="direccion">
+
+
             <button class="submit-button" type="submit">Enviar</button>
         </form>
     </div>
