--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header">Bienvenido a la Tienda de Motos</h1>
+        <h1 class="header">Bienvenido a la Tienda de Motos MJJ</h1>
 
         <h2 class="subheader">Lista de Motos Disponibles</h2>
         <div class="motorcycle-list">
